<?php

    /*
     * The MIT License
     *
     * Copyright 2017 Guillaume de Lestanville <guillaume.delestanville@proximit.fr>.
     *
     * Permission is hereby granted, free of charge, to any person obtaining a copy
     * of this software and associated documentation files (the "Software"), to deal
     * in the Software without restriction, including without limitation the rights
     * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
     * copies of the Software, and to permit persons to whom the Software is
     * furnished to do so, subject to the following conditions:
     *
     * The above copyright notice and this permission notice shall be included in
     * all copies or substantial portions of the Software.
     *
     * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
     * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
     * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
     * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
     * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
     * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
     * THE SOFTWARE.
     */

    namespace Component;

    /**
     * Description of Coonection
     *
     * @author Guillaume de Lestanville <guillaume.delestanville@proximit.fr>
     *
     * @property string $driver Nom du pilote de connexion
     * @property string $connexion_string Chaine de connexion à la base
     * @property string $username Nom d'utilisateur
     * @property string $password Mot de passe
     */
    class Connection extends Component
    {
        public function initProperties()
        {
            parent::initProperties();
            $this->addOption(Option::createEnumOption('driver', array('mysql','sqlite'), true, 'Pilote de connexion', 'mysql' ));
            $this->addOption(Option::createOption('connection_string'));
            $this->addOption(Option::createOption('schema', 'string', true, 'Schéma de la base utilisée'));
            $this->addOption(Option::createOption('username', Option::TYPE_STRING, false, 'Nom d\'utilisateur' ));
            $this->addOption(Option::createOption('password', Option::TYPE_STRING, false, 'Mot de passe' ));
        }
    }
